Thu Jun  5 15:51:18 UTC 2014  Brian Johnson  <johnsonb@ociweb.com>

        * dds/InfoRepo/FederatorConfig.cpp:
        * dds/InfoRepo/FederatorManagerImpl.cpp:
        * dds/InfoRepo/FederatorManagerImpl_updates.cpp:

        * dds/idl/HTemplate.txt:

Wed Jun  4 16:50:22 UTC 2014  Brian Johnson  <johnsonb@ociweb.com>

        * dds/InfoRepo/FederationId.h:
        * dds/InfoRepo/FederationId.cpp:
        * dds/InfoRepo/FederatorConfig.h:
        * dds/InfoRepo/FederatorConfig.inl:
        * dds/InfoRepo/FederatorConfig.cpp:

          Moved id and the fact that it was overridden into its
          own class, so info can be preserved and passed around
          rather than being copied.

        * dds/InfoRepo/DCPSInfoRepo.mpc:
        * dds/InfoRepo/DCPSInfoRepoServ.cpp:
        * dds/InfoRepo/DCPSInfo_i.h:
        * dds/InfoRepo/DCPSInfo_i.cpp:
        * dds/InfoRepo/DCPS_IR_Participant.h:
        * dds/InfoRepo/DCPS_IR_Participant.cpp:
        * dds/InfoRepo/FederatorManagerImpl.h:
        * dds/InfoRepo/FederatorManagerImpl.inl:
        * dds/InfoRepo/FederatorManagerImpl.cpp:
        * dds/InfoRepo/FederatorManagerImpl_updates.cpp:
        * dds/InfoRepo/UpdateListener_T.h:
        * dds/InfoRepo/UpdateListener_T.cpp:

          Changes from refactoring to FederationId.

Wed Jun  4 15:00:58 UTC 2014  Brian Johnson  <johnsonb@ociweb.com>

        * dds/InfoRepo/FederatorConfig.cpp:

          Added setting random id when no endpoint is provided
          (persistence requires endpoints).

Wed Jun  4 14:17:31 UTC 2014  Brian Johnson  <johnsonb@ociweb.com>

        * dds/InfoRepo/FederatorConfig.cpp:

          Fixing wide character build errors.

Tue Jun  3 21:43:13 UTC 2014  Brian Johnson  <johnsonb@ociweb.com>

        * dds/InfoRepo/FederatorConfig.cpp:

          Fixed fuzz errors.

Tue Jun  3 20:56:08 UTC 2014  Brian Johnson  <johnsonb@ociweb.com>

        * dds/InfoRepo/DCPS_IR_Participant.cpp:
